src/tests/snapshots/hebi__tests__class__class_with_field.snap
---
source: src/tests/class.rs
expression: snapshot
---
# Modules:


# Input:
class T:
  v = 10

t0 = T()
t1 = T(v=20)

print t0.v, t1.v


# Result (success):
none

# Stdout:
10 20


