src/tests/snapshots/hebi__tests__class__empty_class.snap
---
source: src/tests/class.rs
expression: snapshot
---
# Modules:


# Input:
class T: pass
print T


# Result (success):
none

# Stdout:
<class def "T">


