src/tests/snapshots/hebi__tests__class__empty_class_with_super.snap
---
source: src/tests/class.rs
expression: snapshot
---
# Modules:


# Input:
class U: pass
class T(U): pass
print T


# Result (success):
none

# Stdout:
<class def "T">


